--- a/style.css
+++ b/style.css
@@ -8,11 +8,11 @@ h1, h2 { color: rgb(250, 253, 47);
     border-bottom: 2px dotted rgb(250, 253, 47); 
     position: absolute;
     left: 60%;
-    top: 5px;
+    top: 8px;
 
 }
 li {
-    color: white; 
+    color: rgb(11, 247, 11); 
     list-style: none; 
     display: inline; 
     padding: 10px;
